# ai-playground

./: LICENSE  plan.html
chatbot/: .gitignore  Dockerfile  README.md  devenv.nix  docker-compose.yml  justfile  manage.py  pyproject.toml
chatbot/accounts/: admin.py  urls.py  views.py
chatbot/accounts/migrations/: 0001_initial.py
chatbot/chat/: admin.py  api.py  models.py  providers.py  redis.py  tasks.py  urls.py  views.py
chatbot/chat/migrations/: 0001_initial.py
chatbot/chatbot/: asgi.py  bolt.py  bolt_api.py  urls.py  views.py  wsgi.py
chatbot/chatbot/settings/: api.py  base.py  procrastinate.py  web.py
chatbot/nginx/: nginx.conf
chatbot/static/: base.css
chatbot/templates/: base.html
chatbot/templates/chat/: chat.html  messagePartial.html  newChatPartial.html
chatbot/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
dataset-chatbot/: .gitignore  Dockerfile  devenv.nix  devenv.yaml  docker-compose.yml  main.py  pyproject.toml  secretspec.toml
dataset-chatbot/src/: cli.py  datasource.py  main.py  models.py  processor.py  sql_validator.py
rag/: CLAUDE.md  devenv.nix  package.json  pyproject.toml
